--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <meta name="description" content="A company of industry leaders, that can transform ideas into technologies enabled services" />
   <meta name="keywords" content="Cloud, Deployment Automation, Mobile, Machine Learning, Big Data, Ideas, Technology, Mentoring, Training, ruby, rails, go, elixir, erlang">
   <title>Idealogy - Brings ideas to life!</title>
-  <link href="css/template.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}css/template.css" rel="stylesheet">
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
